--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,6 +10,11 @@ services:
       # - ./api/var:/srv/api/var:rw
     environment:
       APP_ENV: dev
+      XDEBUG_MODE: debug
+      XDEBUG_CONFIG: >-
+        client_host=host.docker.internal
+        idekey=PHPSTORM
+      PHP_IDE_CONFIG: serverName=api-platform
 
   pwa:
     build:
