--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,13 @@ services:
       timeout: 3s
       retries: 3
       start_period: 30s
+    environment:
+      APP_ENV: dev
+      XDEBUG_MODE: debug
+      XDEBUG_CONFIG: >-
+        client_host=host.docker.internal
+        idekey=PHPSTORM
+      PHP_IDE_CONFIG: serverName=api-platform
 
   pwa:
     build:
